--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body >
   <div class="main">
-    <img src="/images/image-qr-code.png" alt="qr-code">
+    <img src="./images/image-qr-code.png" alt="qr-code">
     <div class="text">
       <span class="t1">
         Improve your front-end skills by building projects
